--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
         <button onclick="submitGuess()">Submit</button>
         <button onclick="toggleHardMode()">Toggle Hard Mode</button>
         <p id="hard-mode-status">Hard Mode: Off</p>
+        <a href="/wordlist">View Word List</a>
     </div>
     <p id="message"></p>
     <textarea id="share-text" readonly></textarea>
