--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>Wordle</h1>
+    <h1>Wurdle</h1>
     <div id="game-board"></div>
     <div id="input-area">
         <input type="text" id="guess-input" maxlength="5" placeholder="Enter 5-letter word">
