--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle</title>
+    <title>Wurdle</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>Wordle</h1>
+    <h1>Wurdle</h1>
     {% if game_blocked %}
         <p id="blocked-message">{{ message }}</p>
         <a href="/wordlist">View Word List</a>
