--- a/templates/wordlist.html
+++ b/templates/wordlist.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>Wordle - Valid Word List</h1>
+    <h1>Wurdle - Valid Word List</h1>
     <p>Below is the list of valid 5-letter words for the game. These are the words you can use for your guesses.</p>
     <div id="word-list">
         {% for word in words %}
