--- a/templates/wordlist.html
+++ b/templates/wordlist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle - Word List</title>
+    <title>Wurdle - Word List</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
@@ -15,5 +15,6 @@
         {% endfor %}
     </div>
     <a href="/">Back to Game</a>
+    <a href="/stats">View Stats</a>
 </body>
 </html>
