--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         <p id="blocked-message">{{ message }}</p>
         <a href="/wordlist">View Word List</a>
         <a href="/stats">View Stats</a>
+        <button onclick="requestReplay()">Replay</button>
     {% else %}
         <div id="game-board"></div>
         <div id="input-area">
@@ -95,6 +96,19 @@
             shareText.select();
             document.execCommand('copy');
             alert('Results copied to clipboard!');
+        }
+
+        async function requestReplay() {
+            const response = await fetch('/replay', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' }
+            });
+            const data = await response.json();
+            if (data.success) {
+                location.reload(); // Reload the page to start a new game
+            } else {
+                alert('Unable to replay at this time.');
+            }
         }
 
         document.getElementById('guess-input')?.addEventListener('keypress', (e) => {
