--- a/templates/stats.html
+++ b/templates/stats.html
@@ -52,14 +52,6 @@
             margin: 5px 0;
             font-size: 14px;
         }
-        .footer a {
-            color: #FFCA28; /* Yellow */
-            text-decoration: none;
-            border-bottom: 1px dashed #FFCA28;
-        }
-        .footer a:hover {
-            color: #EF5350; /* Red */
-        }
         .content {
             margin-top: 70px; /* Space for header */
             margin-bottom: 50px; /* Space for footer */
@@ -84,7 +76,7 @@
     </div>
     <div class="footer">
         <p>Made with ❤️ by Wurdle Team</p>
-        <p>Play Now and Share with Friends! <a href="/promote">Learn More</a></p>
+        <p>Play Now and Share with Friends!</p>
     </div>
 </body>
 </html>
